# Caffe2-yolo-v3

./: README.md  demo.py  demo1.py  myutils.py  yolo_layer.py
Yolo/: CMakeLists.txt  upsample_op.cc  upsample_op.cu  upsample_op.h  yolo_op.cc  yolo_op.cu  yolo_op.h
cppDemo/: boxuitl.h  cppDemo.pro  main.cpp
modelfile/: net.pbtxt  param_init_net.pbtxt  predict_net.pb
